force-app/main/default/objects/Offer__c/fields/Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>