force-app/main/default/objects/Offer__c/fields/Target_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Close_Date__c</fullName>
    <description>testg</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Close Date</label>
    <type>Date</type>
</CustomField>